syntax = "proto3";

package tlspb;

option go_package = "github.com/parsaakbari1209/Database-Security-Proxy/server/tls/tlspb";

message TLSServerRequest {
    string conn_string = 1;
    string sql_string = 2;
}

message TLSServerResponse {
    bool succeed = 1;
    string error = 2;
    string result = 3;
}

service TLSServerService {
    // This rpc is for client-side-tls-service to call.
    // First, it will get encrypted request.
    // Second, all for lower-level (Database-Security-Service) services.
    // Third, Return an encrypted stream.
    rpc TLSServerSend(TLSServerRequest) returns (stream TLSServerResponse) {};
}